# Russian_Zero-Knowledge_Identity_Protocol

./: Cargo.toml  README.md  README_RU.md
examples/rzip-migrant-zk/: README.md  README_RU.md
examples/rzip-migrant-zk/rzip-migrant-cli/: Cargo.toml
examples/rzip-migrant-zk/rzip-migrant-cli/src/: main.rs
examples/rzip-migrant-zk/rzip-migrant-core/: Cargo.toml
examples/rzip-migrant-zk/rzip-migrant-core/src/: lib.rs
examples/rzip-migrant-zk/rzip-migrant-crypto/: Cargo.toml
examples/rzip-migrant-zk/rzip-migrant-crypto/src/: lib.rs
examples/rzip-rescomply-zk/rzip-rescomply-cli/: Cargo.toml
examples/rzip-rescomply-zk/rzip-rescomply-cli/src/: main.rs
examples/rzip-rescomply-zk/rzip-rescomply-core/: Cargo.toml
examples/rzip-rescomply-zk/rzip-rescomply-core/src/: lib.rs
examples/rzip-rescomply-zk/rzip-rescomply-crypto/: Cargo.toml
examples/rzip-rescomply-zk/rzip-rescomply-crypto/src/: lib.rs
examples/szip-migrant-zk/: README.md
examples/szip-migrant-zk/szip-migrant-cli/: Cargo.toml
examples/szip-migrant-zk/szip-migrant-cli/src/: main.rs
examples/szip-migrant-zk/szip-migrant-core/: Cargo.toml
examples/szip-migrant-zk/szip-migrant-crypto/: Cargo.toml
examples/szip-migrant-zk/szip-migrant-crypto/src/: lib.rs
examples/szip-rescomply-zk/szip-rescomply-cli/: Cargo.toml
examples/szip-rescomply-zk/szip-rescomply-cli/src/: main.rs
examples/szip-rescomply-zk/szip-rescomply-core/: Cargo.toml
examples/szip-rescomply-zk/szip-rescomply-core/src/: lib.rs
examples/szip-rescomply-zk/szip-rescomply-crypto/: Cargo.toml
examples/szip-rescomply-zk/szip-rescomply-crypto/src/: lib.rs
rzip-browser/: Cargo.toml
rzip-cli/: Cargo.toml
rzip-cli/src/: main.rs
rzip-core/: Cargo.toml
rzip-crypto/: Cargo.toml
rzip-mobile/: Cargo.toml
rzip-network/: Cargo.toml
rzip-storage/: Cargo.toml
rzip-verifiable/: Cargo.toml
rzip-verifiable/src/: lib.rs
szip-browser/: Cargo.toml
szip-cli/: Cargo.toml
szip-cli/src/: main.rs
szip-core/: Cargo.toml
szip-core/src/: lib.rs
szip-crypto/: Cargo.toml
szip-crypto/src/: lib.rs
szip-mobile/: Cargo.toml
szip-network/: Cargo.toml
szip-storage/: Cargo.toml
szip-verifiable/: Cargo.toml
szip-verifiable/src/: lib.rs
