[workspace]
resolver = "3"
members = [
    "rzip-browser", 
    "rzip-cli", 
    "rzip-core", 
    "rzip-crypto", 
    "rzip-network", 
    "rzip-storage", 
    "rzip-verifiable",
    "examples/rzip-migrant-zk/rzip-migrant-cli",
    "examples/rzip-migrant-zk/rzip-migrant-core",
    "examples/rzip-migrant-zk/rzip-migrant-crypto"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
