[package]
name = "rzip-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rzip-core = { path = "../rzip-core" }
rzip-crypto = { path = "../rzip-crypto" }
rzip-verifiable = { path = "../rzip-verifiable" }
anyhow = "1.0.100"
