[package]
name = "szip-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
szip-core = { path = "../szip-core" }
szip-crypto = { path = "../szip-crypto" }
szip-verifiable = { path = "../szip-verifiable" }
anyhow = "1.0.100"
