[package]
name = "szip-crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
bulletproofs = "5.0"
curve25519-dalek = { version = "4.1", features = ["serde", "rand_core"] }
merlin = "3.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dependencies.szip-core]
path = "../szip-core"