[package]
name = "rzip-migrant-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

rzip-migrant-core = { path = "../rzip-migrant-core" }
rzip-migrant-crypto = { path = "../rzip-migrant-crypto" }