[package]
name = "szip-rescomply-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
szip-rescomply-core = { path = "../szip-rescomply-core" }
szip-rescomply-crypto = { path = "../szip-rescomply-crypto" }

anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
indicatif = "0.17"  # Progress bars
colored = "2.0"     # Colored output
prettytable-rs = "0.10"  # Pretty tables

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dev-dependencies]
tempfile = "3.0"